# ChampionLevelFPV_for_Graduation_thesis

conv-featureDetect/: cnn-jupyter-notebook.ipynb  cnn_model.py  featureDetect.py  myData.py  myDataSet.py
conv-featureDetect/.ipynb_checkpoints/: cnn-jupyter-notebook-checkpoint.ipynb
src/fpv/: CMakeLists.txt  package.xml
src/fpv/include/: rosInc.h  rosprintf.cpp  rosprintf.h
src/fpv/src/: rosNode.cpp
src/fpv/src/fpv_pose/: fpvpose.cpp  fpvpose.h
src/fpv/src/gate_detector/: cGate_Estimator.cpp  cGate_Estimator.h  cImg.cpp  cImg.h  cnn.cu  cnn.cuh  cudatest.cu  cudatest.cuh
unetGateDetector/: ImageProcessing.ipynb  UNet_model.onnx  batch_imgProcess.ipynb  best_model.pth  one-hot_trail.ipynb  predict.py  train.py  unetModel.py  unetTrain.py
unetGateDetector/dataSet/: dataProcess.py
unetGateDetector/dataSet/img_train/: json_to_png.py
unetGateDetector/model/: unet.py  unet_model.py  unet_parts.py
unetGateDetector/utils/: anima.py  dataset.py  utils.py
